<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name" translatable="false">Awesome2</string>
    <string name="lyrics" translatable="false">XL ki kudiyan very very smart\nHai meri tauba tauba\nx2\n\nXL ki kudiyan very
very smart\nHai meri tauba tauba\nx2\n\nSutta bhi peendiyan,whisky bhi
peendiyan x2\nWhisky bhi peendiyan very very hard, hai meri tauba tauba\n\nXL
ki kudiyan very very smart\nHai meri tauba tauba\n\nBikan chalandiyan caran
chalandiyan x2\nCaran chalandiyan very very fast, hai meri tauba tauba\n\nXL
ki kudiyan very very smart\nHai meri tauba tauba\n\nMakeup lagandiyan lipstick
lagandiyan x2\nLipstick lagandiyan very very dark, hai meri tauba tauba\n\nXL
ki kudiyan very very smart\nHai meri tauba tauba\n\nJeansan bhi pandiyan
skirtan bhi pandiyan x2\nSkirtan bhi pandiyan very very short, hai meri tauba
tauba\n\nXL ki kudiyan very very smart\nHai meri tauba tauba\n\nGussan
lagandiyan chata bhi mardiyan\nGussan bhi mardiyan chata bhi mardiyan\nChata
bhi mardiyan very very hard, hai meri tauba tauba\n\nXL ki kudiyan very very
smart\nHai meri tauba tauba\n
</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="babe1">babe1</string>
    <string name="like">Do you like the song?</string>
    <string name="dislike">No! Goto next</string>
    <string name="yes">Yes&#8230;</string>
    <string name="no">Next</string>

</resources>
