<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/imageView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <ImageView
        android:id="@id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/babe1"
        android:paddingTop="8dp"
        android:src="@drawable/aj_pic01" />

    <Button
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#0000ff"
        android:onClick="openBT"
        android:paddingTop="8dp"
        android:text="@string/yes"
        android:textColor="#00ff00"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="#000000"
        android:paddingTop="8dp"
        android:text="@string/no"
        android:textColor="#ff0000"
        android:textSize="16sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/like"
        style="@style/LyricsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/yes"
        android:layout_alignParentLeft="true"
        android:text="@string/like"
        android:textColor="#000000"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/next"
        style="@style/LyricsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/no"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/dislike"
        android:textColor="#000000"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/like"
        android:layout_below="@id/imageView"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/textView"
            style="@style/LyricsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lyrics" />
    </ScrollView>

</RelativeLayout>
